tdf#120525 fix linespacing <100% for impress

apply linespacing changes even for fonts with big descent values

Change-Id: If1763da1ea015822d90a5c7410ca90dcaa71d22f
Reviewed-on: https://gerrit.libreoffice.org/61894
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>